--- a/css/wpCss.css
+++ b/css/wpCss.css
@@ -10,10 +10,8 @@ body{
 	
 	font-family: 'Raleway', sans-serif;
 	background-image:url('./bck1.jpg');
-	background-repeat: no-repeat;
+	background-repeat: repeat-y;
 	background-size: 100% auto;
-	
-	
 }
 
 #nav-bar{
@@ -23,6 +21,8 @@ body{
 	
 	
 }
+
+
 
 .navbar{
 	
@@ -41,7 +41,6 @@ body{
 
 
 .navbar-nav li a{
-	
 	color: #fff !important;
 	font-weight: 600;
 	float:right;
@@ -361,4 +360,4 @@ body{
 	
 	
 }
-	
+
