--- a/css/rgCss.css
+++ b/css/rgCss.css
@@ -30,14 +30,19 @@
 	overflow-y:scroll;
 }
 
+.login-logo{
+	display: block;
+	padding:10px;
+	transform: scale(0.9);
+}
+
 .button-box{
 	width:220px;
 	margin: 36px auto;
 	position:relative;
 	box-shadow: 0 0 20px 9px #ff61241f;
 	border-radius: 30px;
-	
-	
+
 }
 
 .toggle-btn{
@@ -51,7 +56,7 @@
 	
 	
 }
-	#btn{
+#btn{
 	top:0;
 	left:0;
 	position:absolute;
@@ -60,7 +65,18 @@
 	background: linear-gradient(to right, #ff105f, #ffad06);
 	border-radius: 30px;
 	transition: .5s;
-	
+
+}
+#btnR {
+	top:0;
+	left:110px;
+	position:absolute;
+	width:110px;
+	height:100%;
+	background: linear-gradient(to right, #ff105f, #ffad06);
+	border-radius: 30px;
+	transition: .5s;
+
 }
 
 
@@ -83,10 +99,22 @@
 	
 }
 
+
+.error-messages {
+	width:100%;
+	display: block;
+	text-align: center;
+
+}
+.error-messages #error_message {
+	color: #ff0000;
+	display:block;
+}
+
 .input-group{
 	
-	top:180px;
-	position: absolute;
+	top:20px;
+	position: relative;
 	width:280px;
 	transition: .5s;
 }
@@ -105,7 +133,9 @@
 }
 
 .submit-btn{
-	
+	bottom:10px;
+	top:20px;
+	position:relative;
 	width:85%;
 	padding:10px 30px;
 	cursor:pointer;
@@ -139,12 +169,3 @@ span{
 	left:450px;
 }
 
-#error_message {
-	color: red;
-	width:auto;
-	margin: auto;
-	display: block;
-	border: 20px;
-	border: red;
-	border-radius:10px;
-}
