--- a/css/wpCss.css
+++ b/css/wpCss.css
@@ -12,7 +12,8 @@
 body{
 	
 	font-family: 'Raleway', sans-serif;
-	background-image:url('./bck1.jpg');
+/*	background-image:url('./bck1.jpg'); */
+	background-image:url('./man.jpg');
 	background-repeat: repeat-y;
 	background-size: 100% auto;
 }
@@ -272,7 +273,7 @@ body{
 	
 	
 	#social-media{
-		background:#D0D3D4; 
+		/*background:#D0D3D4;  */
 		padding:100px 0;
 		
 	}
