--- a/css/wpCss.css
+++ b/css/wpCss.css
@@ -393,3 +393,19 @@ body{
 	
 }
 
+
+
+/************* about us *************/
+
+#ban{
+		
+	background-image: linear-gradient(to right, #a517ba, #5f1782);
+	color: #fff;
+	padding-top:5%;
+	padding-bottom:10%;
+	margin-top:-50px;
+	
+	
+
+	
+}
