--- a/css/wpCss.css
+++ b/css/wpCss.css
@@ -72,7 +72,7 @@ body{
 	
 	#banner{
 		
-		background-image: linear-gradient(to right, #a517ba, #5f1782);
+		background-image: linear-gradient(to right, #a517ba, #5f1782); 
 		color: #fff;
 		padding-top:5%;
 		padding-bottom:10%;
@@ -399,13 +399,84 @@ body{
 
 #ban{
 		
-	background-image: linear-gradient(to right, #a517ba, #5f1782);
+	background-image: linear-gradient(to right, #a517ba, #5f1782); 
 	color: #fff;
 	padding-top:5%;
 	padding-bottom:10%;
 	margin-top:-50px;
-	
-	
+}
 
+#bann{
+
+	background-image: linear-gradient(to right, #b3b3ff, #5f1782); 
+	color: #fff;
+	padding-top:5%;
+	padding-bottom:10%;
+	margin-top:-50px; 
+}
+
+#bann h1{
+
+	margin-top:-20px;
+
+}
+
+#bann img{
+
+
+	margin-left:-5px;
+}
+
+
+
+/****************Profile page*******************/
+#profile{
+
+
+	background-image: linear-gradient(to right, #b3b3ff, #5f1782); 
+	
+}
+
+#profile img{
+
+
+border:1px solid;
+margin-top:30px;
+
+
+}
+
+#profile h1{
+
+
+	margin-left:-150px;
+	margin-top:20px;
+
+}
+
+#profile p{
+
+margin-top:20px;
+
+}
+
+
+.bo-area{
+
+border:4px solid;
+padding-left:50px;
+margin-left:-61px;
+
+
+}
+
+#profile p{
+
+}
+
+.col-sm{
+
+	float:left;
+	
 	
 }
