--- a/css/wpCss.css
+++ b/css/wpCss.css
@@ -432,20 +432,20 @@ body{
 
 
 /****************Profile page*******************/
+div.bo-area{
+	min-height:355px;
+	display: inline-block;
+	border:4px solid;
+	border-radius: 25px;
+	padding: 20px;
+}
 #profile{
+	background-image: linear-gradient(to right, #b3b3ff, #5f1782);
 
-
-	background-image: linear-gradient(to right, #b3b3ff, #5f1782); 
-	
 }
 
 #profile img{
-
-
 border:1px solid;
-
-
-
 }
 
 #profile h1{
@@ -460,27 +460,4 @@ border:1px solid;
 
 margin-top:10%;
 
-}
-
-
-.bo-area{
-
-border:4px solid;
-padding-left:50px;
-padding-right:30px;
-margin-left:-5%;
-
-
-
-}
-
-#profile p{
-
-}
-
-.col-sm{
-
-	float:left;
-	
-	
 }
