--- a/css/rgCss.css
+++ b/css/rgCss.css
@@ -20,7 +20,6 @@
 
 
 .form-box{
-	
 	width:380px;
 	height:480px;
 	position: relative;
@@ -32,8 +31,11 @@
 
 .login-logo{
 	display: block;
-	padding:10px;
-	transform: scale(0.9);
+	margin-top: 30px;
+	margin-left:auto;
+	margin-right: auto;
+	width:50%;
+	transform: scale(1.5);
 }
 
 .button-box{
